--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 
     </script>
 </head>
-<body onload="onLoad()">
+<body onload="onLoad()" style="background-image:url('img/rose.png'); background-repeat: no-repeat;">
 <div id=header class="button button-block button-large">
 
     Compass
 
 </div>
-<p />&nbsp;<p />
-<button onclick='compassOff()' class="button button-pill button-primary button-large" style="margin:0.1em">Clear Watch</button>
+
+
 
 <div id=hd class="button button-block button-pill button-primary button-large" style="margin:1em;">Heading: <span id=heading></span></div>
 
