--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     </script>
 </head>
-<body onload="onLoad()" style="background-image:url('img/rose.png'); background-repeat: no-repeat;">
+<body onload="onLoad()" style="background-image:url('img/rose.png'); background-repeat: no-repeat; background-size: 100%;">
 <div id=header class="button button-block button-large">
 
     Compass
