--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     </script>
 </head>
-<body onload="onLoad()" style="background-image:url('img/rose.png'); background-repeat: no-repeat; background-size: 100%;">
+<body onload="onLoad()" style="background:url('img/rose.png') no-repeat center center fixed; background-size: cover;">
 <div id=header class="button button-block button-large">
 
     Compass
