--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>PhoneGap Compass Test</title>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="buttons.css" />
     <style>
     body {margin:0px;font-size:large;}
@@ -11,7 +11,7 @@
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 
     <script type="text/javascript">
-    
+
     //
     // Wait for PhoneGap to load
     document.addEventListener("deviceready", onDeviceReady, false);
